<resources>
    <string name="app_name">Chat</string>
    <string name="create_an_account">Create an Account</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="please_check_all_fields">Please check all fields</string>
    <string name="invalid_username">Invalid UserName</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="already_have_an_account">Already have an account signIn here</string>
    <string name="Dont_have_an_account">Don\'t have an account register here</string>
    <string name="signin">SignIn</string>
    <string name="sign_in">Sign In</string>
    <string name="go_chat">GO CHAT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="todo">TODO</string>
    <string name="type_a_message">Type A Message</string>
</resources>
